# tg_order_bot

./: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  startup-script.sh  update.sh
forwarder/: __init__.py  main.py
forwarder/config/: config.json  config_manager.py  types.py
forwarder/database/: __init__.py  base.py  manager.py
forwarder/database/models/: __init__.py  audit_log.py  order.py  user.py
forwarder/database/repositories/: __init__.py  audit_log.py  base.py  order.py  user.py
forwarder/modules/: default.py  document_handler.py  initialize.py  message_handler.py  misc.py
forwarder/utils/: iban.py  message.py  number.py  order.py  sanctions_service.py  sheets_manager.py  swift.py
migrations/: env.py
migrations/versions/: 1013776c4826_initial_migration.py  3fa84f8bd512_add_fks_for_audit_log.py  f42dd5e9cb1b_update_relationships.py
scripts/: check_db.py  manage_db.py
