[tool.poetry]
name = "telegram-forwarder"
version = "2.3.0"
description = ""
authors = ["mrmissx <hi@mrmiss.my.id>"]
license = "GNU General Public License v3.0"
readme = "README.md"
packages = [{ include = "forwarder" }]

[tool.poetry.scripts]
forwarder = "forwarder.main:run"

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = ">=20.7"
python-dotenv = "^1.0.0"
aiohttp = "^3.11.6"
google-auth-oauthlib = "^1.2.1"
google-api-python-client = "^2.153.0"
sqlalchemy = "^2.0.36"
aiosqlite = "^0.20.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.0"
click = "^8.1.7"
greenlet = "^3.1.1"
psutil = "^6.1.0"
pypdf2 = "^3.0.1"
pillow = "^11.0.0"
pytesseract = "^0.3.13"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"


[tool.black]
line-length = 100
target-version = ["py38"]

#
# Isort Config
#
[tool.isort]
profile = "black"
known_third_party = ["telegram", "dotenv"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
